--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
       /*right: 250px;*/
       font-size: 15px;
       color: #ff0000;
-    display: none;"></div>
+    display: none;"
+    ></div>
             </div>
             <!--input to select a file-->
             <input type="file" id="file-input" onchange="handleFileInput(event)" />
