--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="Contrast.js"></script>
     <script type="text/javascript" src="chekFileFletOrder.js"></script>
     <script type="text/javascript" src="supdesFlat.js"></script>
+    <script type="text/javascript" src="orderFlat.js"></script>
     <script type="text/javascript" src="supdesHashavshevt.js"></script>
     <!--    Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -190,6 +191,40 @@
         }
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+//         function setTextDirectionForAllElements() {
+//     // Regular expression to check for Hebrew characters
+//     const hebrewRegex = /[\u0590-\u05FF\u0600-\u06FF]/;
+
+//     // Get all elements that contain text
+//     const elements = document.querySelectorAll('*:not(script):not(style)');
+    
+//     elements.forEach(element => {
+//         if (element.childNodes.length === 1 && element.childNodes[0].nodeType === 3) { // Check if the element contains text
+//             const text = element.textContent.trim();
+            
+//             if (hebrewRegex.test(text)) {
+//                 element.setAttribute('dir', 'rtl'); // Right-to-left for Hebrew
+//             } else {
+//                 element.setAttribute('dir', 'ltr'); // Left-to-right for English
+//             }
+//         }
+//     });
+// }
+
+// // Run the function when the page is loaded
+// window.addEventListener('DOMContentLoaded', setTextDirectionForAllElements);
 
 
     </script>
