--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
       position: relative;
       top: 49%;
       /*right: 250px;*/
-      font-size: 15px;
-      color: #ff0000;
+      font-size: 14px;
+      color: #f74141;
     display: none;"
     ></div>
             </div>
